--- a/src/main/resources/com/me/jsp/bundle/file.properties
+++ b/src/main/resources/com/me/jsp/bundle/file.properties
@@ -6,3 +6,8 @@ label.name=Nombre Equipo
 label.spanish=Espa\u00f1ol
 label.select_language=Seleccionar idioma
 label.english=Ingl\u00e9s
+label.name2=Descripcion
+abel.require_field=Campo Requerido
+label.require_field=CampoRequerido
+label.currency=Moneda
+label.name3=Foto
