Al 100% Los idiomas

--- a/src/main/resources/com/me/jsp/bundle/file.properties
+++ b/src/main/resources/com/me/jsp/bundle/file.properties
@@ -11,3 +11,11 @@ abel.require_field=Campo Requerido
 label.require_field=CampoRequerido
 label.currency=Moneda
 label.name3=Foto
+label.name4=Nombre Jugador
+label.name5=Peso Jugador
+label.name6=Edad Jugador
+label.name7=Altura Jugador
+label.name8=Seleccione un equipo
+label.name9=Jugadores Registrados
+label.name10=Equipo
+label.name11=Equipos Registrados
