Al 100% Los idiomas en las 2 paginas

--- a/src/main/resources/com/me/jsp/bundle/file.properties
+++ b/src/main/resources/com/me/jsp/bundle/file.properties
@@ -19,3 +19,4 @@ label.name8=Seleccione un equipo
 label.name9=Jugadores Registrados
 label.name10=Equipo
 label.name11=Equipos Registrados
+label.name12=Jugadores
